resolved artist row on homepage issue and tokenize and create page spacing

--- a/src/App.css
+++ b/src/App.css
@@ -2324,7 +2324,8 @@ a{
   }
 
   .artistButton {
-    width: 100%;
+    width: 100px;
+    height: 100px;
   }
 
   .SeparatorTitle {
